Fix vertical overflow of videos in full-screen mode

--- a/css/qbsync.css
+++ b/css/qbsync.css
@@ -17,6 +17,7 @@ body {
 	display: block;
 	width: 100%;
 	height: auto;
+	max-height: 100vh;
 	background-color: black;
 }
 
